[workspace]
members = [
    "peerage-merkle-tree",
    "peerage-crypto",
    "peerage-hash",
    "peerage-utils",
    "peerage-binary",
    "peerage-rtree",
    "peerage-macros",
    "peerage-holder",
    "peerage-ledger",
    "peerage-coll",
    "peerage-keys",
    "peerage-node",
    "peerage-hashmap"
]