[workspace]
members = [
    "peerage-hash",
    "peerage-utils",
    "peerage-binary",
    "peerage-rtree",
    "peerage-macros",
    "peerage-holder",
    "peerage-ledger",
    "peerage-coll",
    "peerage-keys",
    "peerage-node",
    "peerage-hashmap",
    "peerage-codecs",
    "peerage-rand",
    "peerage-protocol",
    "peerage-assymenc",
    "peerage-tmcipher"
]