[package]
name = "peerage-rtree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
peerage-utils = { path = "../peerage-utils" }
peerage-macros = { path = "../peerage-macros" }
peerage-holder = { path = "../peerage-holder" }
peerage-ledger = { path = "../peerage-ledger" }
peerage-coll = { path = "../peerage-coll" }
peerage-keys = { path = "../peerage-keys" }
peerage-node = { path = "../peerage-node" }

paste = "*"
lazy_static = "*"
