[package]
name = "peerage-tmcipher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "*"
peerage-coll = { path = "../peerage-coll" }
peerage-utils = { path = "../peerage-utils" }
peerage-rand = { path = "../peerage-rand" }
peerage-codecs = { path = "../peerage-codecs" }